<resources>
    <string name="app_name">cardesk</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="my_advertisement">My advert</string>
    <string name="chats">Chats</string>
    <string name="other">Other</string>
    <string name="sign_in">Sign in</string>
    <string name="for_post_ads_write_messages_and_save_searches_and_bookmarks">For post ads, write messages and save searches and bookmarks</string>
    <string name="services">Services</string>
    <string name="car_valuation_calculator">Car valuation calculator</string>
    <string name="vin_checker">VIN checker</string>
    <string name="source">Source</string>
    <string name="finance_credit_leasing">Finance - credit, leasing</string>
    <string name="installment_plan">Installment plan</string>
    <string name="vehicle_check_list">"Vehicle check list "</string>
    <string name="modification_catalog">Modification catalog</string>
    <string name="car_trader_simulator">Car trader simulator</string>
    <string name="app_theme">App theme</string>
    <string name="app_language">App language</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="username_or_e_mail">Username or e-mail</string>
    <string name="password">Password</string>
    <string name="your_name">Your name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_the_email_address_you_provided_during_registration_we_will_send_instructions_on_how_to_reset_your_password">Enter the email address you provided during registration. We will send instructions on how to reset your password.</string>
    <string name="send">Send</string>
    <string name="login_to_be_able_to_write_messages">Login to be able to write messages</string>
    <string name="login_to_be_able_to_bookmark_posts">Login to be able to bookmark posts</string>
    <string name="login_to_be_able_to_advertise">Login to be able to advertise</string>
    <string name="vehicle_photo">Vehicle photo</string>
    <string name="clear">clear</string>
    <string name="add_ads">add ads</string>
    <string name="vehicle">Vehicle</string>
    <string name="menu_item_icon">menu item icon</string>
    <string name="make_model_year_mileage">Make, model, year, mileage</string>
    <string name="vehicle_parameters">Vehicle parameters</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="mileage">Mileage</string>
    <string name="mileage_km">Mileage (km)</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="generation">Generation</string>
    <string name="engine_volume">Engine volume</string>
    <string name="engine_type">Engine type</string>
    <string name="description">Description</string>
    <string name="description_and_price">Description and price</string>
    <string name="price">Price ($)</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="chose_photo">Chose photo</string>
    <string name="to_bookmark">To bookmark</string>
    <string name="share">Share</string>
    <string name="to_compose_screen">To Compose screen</string>
</resources>