<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_search"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/fragment_bookmarks"
        android:enabled="true"
        android:icon="@drawable/baseline_bookmark_border_24"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/fragment_my_ads"
        android:enabled="true"
        android:icon="@drawable/baseline_add_box_24"
        android:title="@string/my_advertisement" />
    <item
        android:id="@+id/fragment_chats"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chats" />
    <item
        android:id="@+id/fragment_other"
        android:enabled="true"
        android:icon="@drawable/baseline_other_24"
        android:title="@string/other" />
</menu>