<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/enter_the_email_address_you_provided_during_registration_we_will_send_instructions_on_how_to_reset_your_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_email_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/e_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_round_corner" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot_password_send_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/send" />

</LinearLayout>