<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username_or_e_mail"
        android:textColorHint="@color/blue_text"
        app:endIconMode="custom"
        app:hintTextColor="@color/blue_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_round_corner"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/blue_text"
        app:endIconDrawable="@drawable/baseline_password_eye"
        app:endIconMode="custom"
        app:hintTextColor="@color/blue_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_round_corner"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_primary" />
</LinearLayout>