<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/vehicle_parameters"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/select_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/selected_make_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/make"
                android:textColor="@color/blue_text"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/selected_model_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/model"
                android:textColor="@color/blue_text"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_generation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/selected_generation_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/generation"
                android:textColor="@color/blue_text"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_engine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/selected_engine_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/engine_type"
                android:textColor="@color/blue_text"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/engine_volume_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/engine_volume"
                android:textColorHint="@color/blue_text"
                app:hintTextColor="@color/blue_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/engine_volume_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_corner"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/year_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/year"
                android:textColorHint="@color/blue_text"
                app:hintTextColor="@color/blue_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/year_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_corner"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mileage_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/mileage_km"
                android:textColorHint="@color/blue_text"
                app:hintTextColor="@color/blue_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mileage_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_corner"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/selected_color_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/color"
                android:textColor="@color/blue_text"
                android:textSize="16sp"
                app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/vehicle_photo"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/blue_text"
                    android:text="@string/chose_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/chose_photo_btn"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_image_placeholder"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/description_and_price"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/description"
                app:expandedHintEnabled="false"
                android:textColorHint="@color/blue_text"
                app:hintTextColor="@color/blue_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_corner" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Price ($)"
                android:textColorHint="@color/blue_text"
                app:hintTextColor="@color/blue_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_corner"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/create"
            android:id="@+id/create_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>