<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp">

    <TextView
        android:id="@+id/ads_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5600 $" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ads_photo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/ads_price_tv">

        <ImageView
            android:id="@+id/ads_photo_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="0dp"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/vehicle_photo"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ads_params_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:maxLines="2"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ads_photo_container"
        tools:text="2001 y., automatical, 2.2 l, gas, sedan, 289000 km" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ads_params_description_et">

        <ImageView
            android:id="@+id/save_ad_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_bookmark_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/share_ad_ib"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_bookmark"
            android:textColor="@color/blue_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/share_ad_ib"
            app:layout_constraintTop_toBottomOf="@id/save_ad_ib" />

        <ImageView
            android:id="@+id/share_ad_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintLeft_toRightOf="@id/save_ad_ib"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/blue_text"
            app:layout_constraintLeft_toRightOf="@id/save_ad_ib"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_ad_ib" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:textColor="@color/black"
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icons_layout"
        tools:text="description long text  " />

    <TextView
        android:id="@+id/ads_city_and_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        tools:text="Minsk - 26 September" />


</androidx.constraintlayout.widget.ConstraintLayout>